# docs/swagger.yaml
@@ -192,6 +192,33 @@ definitions:
         example: 00:1A:2B:3C:4D:5E
         type: string
     type: object
+  models.EditUserRequest:
+    properties:
+      bouquet:
+        type: string
+      device_id:
+        type: integer
+      enviar_notificacao:
+        type: boolean
+      mac:
+        type: string
+      nome_do_aplicativo:
+        type: string
+      nome_para_aviso:
+        type: string
+      numero_whats:
+        type: string
+      password:
+        type: string
+      reseller_notes:
+        type: string
+      user_id:
+        type: integer
+      username:
+        type: string
+      vencimento_aplicativo:
+        type: string
+    type: object
   models.ScreenRequest:
     properties:
       userID:
@@ -522,6 +549,54 @@ paths:
       security:
       - BearerAuth: []
       summary: Adiciona uma nova tela ao usuário
+      tags:
+      - ToolsTable
+  /api/tools-table/edit/{id}:
+    put:
+      consumes:
+      - application/json
+      description: Permite a edição de dados de um usuário na revenda autenticada
+      parameters:
+      - description: ID do usuário a ser editado
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Dados do usuário a serem editados
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/models.EditUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Usuário editado com sucesso
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Erro na requisição
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: Token inválido ou acesso negado
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Erro interno ao processar a requisição
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Edita um usuário
       tags:
       - ToolsTable
   /api/tools-table/remove-screen:
