# routes/routes.go
@@ -31,6 +31,7 @@ func SetupRoutes(r *gin.Engine) {
 		protected.GET("/credits", controllers.GetCredits)
 		protected.POST("/tools-table/add-screen", controllers.AddScreen)
 		protected.POST("/tools-table/remove-screen", controllers.RemoveScreen)
+		protected.PUT("/tools-table/edit/:id", controllers.EditUser)
 
 	}
 }
